--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <hr>
         <h3>Weekly Assignments</h3>
         <ul>
-            <li><a href="">Exercise 2.2</a></li>
-            <li><a href="">Assignment 2.3</a></li>
+            <li><a href="weekly-folder/week-2/phiseme-exercise2.html">Exercise 2.2</a></li>
+            <li><a href="weekly-folder/week-2/phiseme-payroll.html">Assignment 2.3</a></li>
             <li><a href="">Assignment 3.2</a></li>
             <li><a href="">Assignment 4.2</a></li>
             <li><a href="">Assignment 5.2</a></li>
