--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!--
-    Title: index.html
-    Author: Manel Phiseme
-    Date: 3/20/2022
-    Description: Th is the html code for the landing page for my web-231 courses GitHub repository
--->
 
 <!DOCTYPE html>
 <html lang="en-us">
@@ -13,6 +7,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap" rel="stylesheet">
     </head>
     <body>
+        <!--
+    Title: index.html
+    Author: Manel Phiseme
+    Date: 3/20/2022
+    Description: Th is the html code for the landing page for my web-231 courses GitHub repository
+       -->
         <div id="container">
         <header>   
             <h1>Manel Phiseme's Landing Page</h1>
@@ -24,7 +24,7 @@
         <ul>
             <li><a href="weekly-folder/week-2/phiseme-exercise2.html">Exercise 2.2</a></li>
             <li><a href="weekly-folder/week-2/phiseme-payroll.html">Assignment 2.3</a></li>
-            <li><a href="">Assignment 3.2</a></li>
+            <li><a href="weekly-folder/week-3/phiseme-temp-conversion.html">Assignment 3.2</a></li>
             <li><a href="">Assignment 4.2</a></li>
             <li><a href="">Assignment 5.2</a></li>
             <li><a href="">Assignment 6.2</a></li>
