--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="weekly-folder/week-2/phiseme-exercise2.html">Exercise 2.2</a></li>
             <li><a href="weekly-folder/week-2/phiseme-payroll.html">Assignment 2.3</a></li>
             <li><a href="weekly-folder/week-3/phiseme-temp-conversion.html">Assignment 3.2</a></li>
-            <li><a href="">Assignment 4.2</a></li>
+            <li><a href="weekly-folder/week-4/phiseme-Assignment 4.2 - Number Guessing Game.html">Assignment 4.2</a></li>
             <li><a href="">Assignment 5.2</a></li>
             <li><a href="">Assignment 6.2</a></li>
             <li><a href="">Assignment 7.2</a></li>
