--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </ul>
         <h3>Projects</h3>
         <ul>
-            <li><a href="">Final: Card Game</a></li>
+            <li><a href="weekly-folder/week-9/phiseme-card-game.html">Final: Card Game</a></li>
             <li><a href="">bioSite project Home Page</a></li>
         </ul>
         <h4>Important Links</h4>
